--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Adicionar</button>
       </div>
+
+      
     </fieldset>
   </form>
   
@@ -45,7 +47,7 @@
               <th>Nome</th>
               <th>Email</th>
               <th>Telefone</th>
-              <th>Ações</th>
+              <th>Ações1</th>
           </tr>
       </thead>
 
@@ -59,7 +61,7 @@
               <td>John Doe</td>
               <td>john@doe.com</td>
               <td>11 98787 7626</td>
-              <td><a href="#">Excluir</a></td>
+              <td ><a href="#"  type="button">Excluir1</a></td>
           </tr>
 
 
